@@ -9,7 +9,7 @@ See the manual for detailed information.
   are permitted in any medium without royalty provided the copyright
   notice and this notice are preserved.
 
-*** IMPORTANT NEWS FOR ALL AUTHORS OF TEXINFO MANUALS ***
+*** NEWS FOR ALL AUTHORS OF TEXINFO MANUALS ***
 
 As of version 4.2, Texinfo has a new command @copying to define the
 copyright and copying permissions for a manual.  If you haven't already,
@@ -22,6 +22,10 @@ one of the relevant sections:
 
 -------------------------------------------------------------------------------
 
+* info:
+  - support for multibyte encodings such as UTF-8.
+
+
 4.12 (20 April 2008)
 
 * Language:
